working on #12 #15 #16 #11 #1 #4 and #3

--- a/website/css/slideout.css
+++ b/website/css/slideout.css
@@ -15,6 +15,7 @@ body {
   -webkit-overflow-scrolling: touch;
   display: none;
   background-color: #333333;
+  box-shadow: 2px 5px 0 0 rgba(255, 255, 255, 0.16), 0 2px 10px 0 rgba(255, 255, 255, 0.12); }
 }
 
 .slideout-panel {
@@ -44,7 +45,7 @@ body {
 }
 
 .list-group-item {
-  border: 1px solid #555;
+  border: none;
 }
 
 a.list-group-item {
