--- a/website/js/templates/application.hbs
+++ b/website/js/templates/application.hbs
@@ -16,7 +16,7 @@
       <div class="container">
           <div class="navbar-header">
               <span class="navbar-brand">
-                <i class="fa fa-bars hidden-lg"></i> 
+                <i class="fa fa-bars hidden-lg"></i>
                 WWW.REMOJANSEN.COM
               </span>
           </div>
@@ -41,16 +41,51 @@
       </div>
   </div>
   <!-- footer -->
-  <footer class="footer printNotVisible">
-      <div class="container">
+  <footer class="page-footer printNotVisible">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h4>About</h4>
+          <p>I'm a web development ninja,
+            <a class="link" href="https://github.com/ower89">open-source contributor</a>,
+            writer, speaker, entrepreneur, technology lover,
+            <a class="link" href="https://live.xbox.com/en-US/Profile?gamertag=OweR%20ReLoaDeD">Xbox hardcore gamer</a>
+            and Internet enthusiast.
+            Lead UX Engineer <a class="link" href="http://www.moneymate.com">@MoneyMate</a> &amp;
+            CEO <a class="link" href="http://www.wolksoftware.com">@WolkSoftwareLtd</a>.</p>
+        </div>
+        <div class="col-md-4">
+          <h4>Legal</h4>
+          <p>My thoughts do not reflect the views of my employer.</p>
           <p>
-            Copyright &copy; 2013 Remo H. Jansen | My thoughts do not reflect the views of my employer
-            Content Licensed under
-            <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">
-              <img src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png"/>
-            </a>
+            This website's source code can be found at github and is licensed under the
+            <a class="link" href="http://opensource.org/licenses/MIT">MIT license</a>.
+            Content is under license under the
+            <a class="link" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>
+            license.
           </p>
+        </div>
+        <div class="col-md-4">
+          <h4>Contact</h4>
+          <p>
+            I am open to speaking at dev meetups and
+            conferences, taking on a new writing project and
+            doing occasional interviews.
+          </p>
+          <p>
+            Please feel free to contact me via
+            <a class="link" href="https://twitter.com/OweR_ReLoaDeD">twitter</a>,
+            <a class="link" href="http://www.linkedin.com/in/remojansen">linkedin</a>
+            or <a class="link" href="mailto:remo.jansen@wolksoftware.com">email</a>.
+          </p>
+        </div>
       </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        Copyright &copy; 2013 - 2015 Remo H. Jansen, All rights reserved.
+      </div>
+    </div>
   </footer>
   <div class="easterEgg">
       <div class="closeeasterEgg"><i class="glyphicon glyphicon-remove-circle"></i></div>
