--- a/website/js/templates/stackoverflow.hbs
+++ b/website/js/templates/stackoverflow.hbs
@@ -1,12 +1,6 @@
 <div>
-  <div class="fadeInDown animated">
-    <h3 class="notopmargin">Stack Overflow User Feed</h3>
-    <p>
-      todo
-    </p>
-  </div>
   {{#each item}}
-  <div class="well fadeInLeft animated">
+  <div class="well fadeInUp animated">
     <h2>
       <a class="link" href="{{unbound id}}">{{unbound title.content}}</a>
     </h2>
