--- a/website/css/style.css
+++ b/website/css/style.css
@@ -7,14 +7,21 @@ pre.prettyprint {
 
 body
 {
-    background-repeat: repeat-x;
-    background-color: #f2f2f2;
-    color: #99A0AA;
-    font-family: 'Raleway';
+	color: #99A0AA;
+	font-family: 'Raleway';
 }
 
-main{
+#panel {
+	background-image: url('/website/assets/bg.png');
+	background-repeat: repeat-x;
 	background-color: #f2f2f2;
+}
+
+#panel {
+	box-shadow: 2px 5px 0 0 rgba(255, 255, 255, 0.6); */
+  -webkit-box-shadow: -1px 0px 10px 1px rgba(0,0,0,1);
+  -moz-box-shadow: -1px 0px 10px 1px rgba(0,0,0,1);
+  box-shadow: -1px 0px 10px 1px rgba(0,0,0,1);
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
@@ -33,11 +40,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .a {
-    color: #4FC1E9;
+    color: #FC6E51;
 }
 
 .a:hover {
-    color: #3BAFDA;
+    color: #FC6E51;
     text-decoration: underline;
 }
 
@@ -54,10 +61,29 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     background-color: #272b30;
 }
 
-footer {
-    background-color: #FC6E51;
-    padding-top: 15px;
-    color: #fff;
+footer.page-footer {
+  margin-top: 20px;
+  padding-top: 20px;
+	background-color: #FC6E51;
+	color: #fff;
+}
+
+footer.page-footer .footer-copyright {
+	margin-top: 20px;
+  overflow: hidden;
+  height: 50px;
+  line-height: 50px;
+  color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(51, 51, 51, 0.08);
+}
+
+footer .link, footer {
+    color: #ffccbc;
+}
+
+footer .link:hover {
+    color: #ffccbc;
+    text-decoration: underline;
 }
 
 .btn {
@@ -444,11 +470,11 @@ fieldset[disabled] .btn-link:focus {
 }
 
 .link {
-    color: #4FC1E9;
+    color: #FC6E51;
 }
 
 .link:hover {
-    color: #3BAFDA;
+    color: #FC6E51;
     text-decoration: underline;
 }
 
@@ -530,7 +556,8 @@ ul.social li{
 }
 
 .maincontainer {
-    padding-top: 80px;padding-bottom: 40px;
+    padding-top: 60px;
+		padding-bottom: 40px;
 		min-height: 900px;
 }
 
@@ -705,7 +732,7 @@ pre {
 
 .navbar-default {
     background-color: #FC6E51;
-    border-color: #E9573F;
+    border-color: #FC6E51;
 }
 
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
@@ -759,7 +786,6 @@ pre {
 .label-default {
     background-color: #F5F7FA;
     color: #99A0AA;
-    box-shadow: 0 1px 2px rgba(0,0,0,.2);
     margin: 3px;
 }
 
@@ -824,6 +850,7 @@ ol.linenums {
 }
 .tweet-text {
 	min-height: 120px;
+	overflow: hidden;
 }
 
 .tweet-image{
