--- a/website/js/templates/twitter.hbs
+++ b/website/js/templates/twitter.hbs
@@ -1,19 +1,10 @@
-<blockquote class="large fadeInDown animated">
-  <p>
-    <strong>Please Note:</strong>
-    This is just a preview of my latest tweets.
-    If you are looking for all my tweets or you want to
-    follow me, please visit my twitter account at
-    <a href="https://twitter.com/OweR_ReLoaDeD/">@OweR_ReLoaDeD</a>
-  </p>
-</blockquote>
 <div class="row">
   {{#each item}}
     <div class="col-md-4">
       <div class="well fadeInUp animated tweet">
         <a href="https://twitter.com/OweR_ReLoaDeD/">
           <img src="/website/assets/me.png" class="pull-left img-rounded tweet-image"/>
-        </a>  
+        </a>
         <div class="tweet-body">
           <div class="tweet-text">
             {{{unbound description}}}
@@ -28,3 +19,11 @@
     </div>
   {{/each}}
 </div>
+<blockquote class="large fadeInDown animated">
+  <p>
+    <strong>Please Note:</strong>
+    This is just a preview of my latest tweets.
+    If you are looking for all my tweets. You can find my twitter user
+    profile at <a href="https://twitter.com/OweR_ReLoaDeD/">@OweR_ReLoaDeD</a>
+  </p>
+</blockquote>
