--- a/website/js/templates/cv/awards.hbs
+++ b/website/js/templates/cv/awards.hbs
@@ -1,24 +1,26 @@
 <h3>{{unbound awards.title}}</h3>
-{{#each awards.organization}}
-	<h4><i class="glyphicon glyphicon-certificate"></i> {{unbound name}}</h4>
-	{{#each course}}
-		<p>
-			<span class="label label-warning">
-                <img class="location" alt="IE" src="{{unbound country_icon_path}}"/>
-                {{unbound unboundminitial_date}}
-            </span>
-			<b>{{unbound name}}</b>
-		</p>
-		{{#each paragraph}}<p class="paragraph">{{{unbound this}}}</p>{{/each}}
+{{#each organization in awards.organization}}
+	<h4><i class="glyphicon glyphicon-certificate"></i> {{unbound organization.name}}</h4>
+	{{#each crs in organization.course}}
+	<p>
+		<span class="label label-warning">
+	        <img class="location" alt="IE" src="{{unbound crs.country_icon_path}}"/>
+	        {{unbound crs.initial_date}}
+	    </span>
+		<b>{{unbound crs.name}}</b>
+	</p>
+	{{#each prgh in crs.paragraph}}<p class="paragraph">{{{unbound prgh}}}</p>{{/each}}
 		<p class="skill_container">
-			<b>{{skill.title}}:</b>
-			{{#each skill.item}}<span class="label label-default">Responsive Design</span> {{/each}}
+			<b>{{crs.skill.title}}:</b>
+			{{#each skill in crs.skill.item}}
+				<span class="label label-default">{{skill}}</span>
+			{{/each}}
 		</p>
 	{{/each}}
-	{{#if picture}}
-        <div class="centre">
-            <img src="{{unbound picture}}" style="width: 50%;"/>
-        </div>
-    {{/if}}
-	{{#if diaplay_break}}<hr />{{/if}}
+	{{#if organization.picture}}
+      <div class="centre">
+          <img src="{{unbound organization.picture}}" style="width: 50%;"/>
+      </div>
+  {{/if}}
+	{{#if organization.diaplay_break}}<hr />{{/if}}
 {{/each}}
