--- a/website/js/templates/cv/education.hbs
+++ b/website/js/templates/cv/education.hbs
@@ -1,19 +1,21 @@
 <h3>{{unbound education.title}}</h3>
-{{#each education.organizarion}}
-	<h4><i class="glyphicon glyphicon-bookmark"></i> {{unbound name}}</h4>
-	{{#each course}}
+{{#each org in education.organizarion}}
+	<h4><i class="glyphicon glyphicon-bookmark"></i> {{unbound org.name}}</h4>
+	{{#each crs in org.course}}
 		<p>
 			<span class="label label-warning">
-                <img class="location" alt="" src="{{unbound country_icon_path}}"/>
-                {{unbound initial_date}}
-            </span>
-			<b>{{unbound name}}</b>
+		      <img class="location" alt="" src="{{unbound crs.country_icon_path}}"/>
+		      {{unbound crs.initial_date}}
+		  </span>
+			<b>{{unbound crs.name}}</b>
 		</p>
-        {{#each paragraph}}<p class="paragraph">{{unbound this}}</p>{{/each}}
-        <p class="skill_container">
-          {{unbound skill.title}}
-          {{#each skill.item}}<span class="label label-default">{{unbound this}}</span> {{/each}}
-        </p>
-    {{/each}}
-	{{#if diaplay_break}}<hr/>{{/if}}
+		{{#each prgh in crs.paragraph}}
+			<p class="paragraph">{{unbound prgh}}</p>
+		{{/each}}
+		<p class="skill_container">
+		  {{unbound crs.skill.title}}
+		  {{#each skill in crs.skill.item}}<span class="label label-default">{{unbound skill}}</span> {{/each}}
+		</p>
+	{{/each}}
+	{{#if org.diaplay_break}}<hr/>{{/if}}
 {{/each}}
