--- a/website/js/templates/cv/recommendations.hbs
+++ b/website/js/templates/cv/recommendations.hbs
@@ -1,13 +1,19 @@
 <h3>{{recommendations.title}}</h3>
-{{#each recommendations.quote}}
+{{#each quote in recommendations.quote}}
     <p>
       <span class="label label-warning">
-          <img class="location" alt="IE" src="{{unbound country_icon_path}}"/> {{unbound initial_date}}</span>
-      <b>{{unbound by_name}} - {{unbound by_role}} &#64; {{unbound by_organization}}</b>
+          <img class="location" alt="IE" src="{{unbound quote.country_icon_path}}"/>
+          {{unbound quote.initial_date}}
+      </span>
+      <b>
+        {{unbound quote.by_name}} -
+        {{unbound quote.by_role}} -
+        {{unbound quote.by_organization}}
+      </b>
     </p>
     <div class="quote-container">
-      {{#each paragraph}}
-          <p class="quote">{{unbound this}}</p>
-        {{/each}}
+      {{#each prgh in quote.paragraph}}
+        <p class="quote">{{unbound prgh}}</p>
+      {{/each}}
     </div>
 {{/each}}
