--- a/website/js/templates/cv/skills.hbs
+++ b/website/js/templates/cv/skills.hbs
@@ -1,11 +1,11 @@
 <h3>{{unbound skills.title}}</h3>
-{{#each skills.skill}}
+{{#each skill in skills.skill}}
     <div class="row">
-        <div class="col-md-4 tright">{{{unbound this.name}}}</div>
+        <div class="col-md-4 tright">{{{unbound skill.name}}}</div>
         <div class="col-md-8">
             <div class="progress">
-                <div class="progress-bar progress-bar-{{unbound this.class}}"
-                     role="progressbar" style="width: {{unbound this.rank}}%">
+                <div class="progress-bar progress-bar-{{unbound skill.class}}"
+                     role="progressbar" style="width: {{unbound skill.rank}}%">
                 </div>
             </div>
         </div>
