--- a/website/js/templates/application.hbs
+++ b/website/js/templates/application.hbs
@@ -46,13 +46,22 @@
       <div class="row">
         <div class="col-md-4">
           <h4>About</h4>
-          <p>I'm a web development ninja,
-            <a class="link" href="https://github.com/ower89">open-source contributor</a>,
-            writer, speaker, entrepreneur, technology lover,
-            <a class="link" href="https://live.xbox.com/en-US/Profile?gamertag=OweR%20ReLoaDeD">Xbox hardcore gamer</a>
-            and Internet enthusiast.
-            Lead UX Engineer <a class="link" href="http://www.moneymate.com">@MoneyMate</a> &amp;
-            CEO <a class="link" href="http://www.wolksoftware.com">@WolkSoftwareLtd</a>.</p>
+          <p>
+            I'm a
+            <a class="link" href="#/portfolio">web development ninja</a>,
+            <a class="link" href="#/github">open-source contributor</a>,
+            <a class="link" href="#/publications">writer</a>,
+            <a class="link" href="#/talks">speaker</a>,
+            <a class="link" href="http://www.wolksoftware.com">entrepreneur</a>,
+            <a class="link" href="#/blog">technology lover</a>,
+            <a class="link" href="https://live.xbox.com/en-US/Profile?gamertag=OweR%20ReLoaDeD">gamer</a>
+            and
+            <a class="link" href="#/twitter">Internet enthusiast</a>.
+            Lead UX Engineer
+            <a class="link" href="http://www.moneymate.com">@MoneyMate</a> &amp;
+            CEO
+            <a class="link" href="http://www.wolksoftware.com">@WolkSoftwareLtd</a>.
+          </p>
         </div>
         <div class="col-md-4">
           <h4>Legal</h4>
