--- a/website/js/templates/blog.hbs
+++ b/website/js/templates/blog.hbs
@@ -1,6 +1,6 @@
 <div>
   {{#each item in post}}
-  <div class="well fadeInLeft animated">
+  <div class="well fadeInUp animated">
     <h2>
       <a class="link" href="{{unbound item.link}}">{{unbound item.title}}</a>
     </h2>
