--- a/website/css/style.css
+++ b/website/css/style.css
@@ -754,21 +754,21 @@ pre {
 
 .navbar-default .navbar-nav > li.active > a, .navbar-default .navbar-nav > li.active > a:hover {
     color: #ffffff;
-    background-color: #E9573F;
+    background-color: transparent;
 }
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
     color: #ffffff;
-    background-color: #E9573F;
+    background-color: #transparent;
 }
 
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color: #FC6E51;
+    background-color: #transparent;
     border-color: #E9573F;
 }
 
 .navbar-default .navbar-toggle {
-    background-color: #FC6E51;
+    background-color: #transparent;
     border-color: #E9573F;
 }
 
