working on #4 and #14

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -866,3 +866,13 @@ ol.linenums {
 	color: #999;
 	margin-right: 1%;
 }
+
+.publication {
+	padding: 5%;
+	min-height: 643px;
+}
+
+
+.publication img {
+	width: 100%;
+}
