--- a/website/css/style.css
+++ b/website/css/style.css
@@ -16,7 +16,7 @@ body
 }
 
 #panel {
-	background-image: url('/website/assets/bg.png');
+	background-image: url('../assets/bg.png');
 	background-repeat: repeat-x;
 	background-color: #f2f2f2;
 }
@@ -545,10 +545,17 @@ ul.social li{
     text-align: center;
 }
 
+.printVisible{
+	display: none;
+}
+
 @media print {
     .printNotVisible{
         display: none;
     }
+		.printVisible{
+			display: block;
+		}
     .maincontainer {
         padding-top: 10px;
         padding-bottom: 10px;
@@ -887,4 +894,38 @@ ol.linenums {
 
 .gitfeed-body{
 	min-height: 60px;
+}
+
+@media print {
+  a[href]:after {
+    content: none !important;
+  }
+	h2 {
+		font-size: 24px;
+		margin-top: 5px;
+	}
+	.jumbotron p {
+	  margin-bottom: 10px;
+		font-size: 18px;
+	}
+	.jumbotron{
+		padding-right: 20px !important;
+		padding-left: 20px !important;
+		padding-bottom: 0px !important;
+		margin-bottom: 0px !important;
+	}
+	h3{
+		margin-top: 5px !important;
+    margin-bottom: 5px !important;
+		page-break-before: always;
+		border-bottom: 1px solid #F5F7FA;
+		padding-bottom: 10px;
+	}
+	.well {
+		padding-bottom: 5px;
+		margin-bottom: 5px !important;
+	}
+	.paragraph {
+  	font-size: 12px !important;
+	}
 }
