added some slides

--- a/talks/css/tomorrow-night.css
+++ b/talks/css/tomorrow-night.css
@@ -6,7 +6,7 @@
   font-size: 12px;
   line-height: 1.5;
   padding: 10px;
-  border-left: 5px solid #00bc8c;
+  border-left: 5px solid #0074c1;
 }
 
 .pln {
