--- a/website/js/templates/github.hbs
+++ b/website/js/templates/github.hbs
@@ -4,11 +4,11 @@
       <div class="well fadeInUp animated gitfeed">
         <div>
           <div class="gitfeed-body">
-            {{unbound i.title.content}}
+            {{unbound i.title}}
           </div>
           <hr/>
           {{unbound i.published}}
-          <a class="pull-right link" href="{{unbound i.link.href}}">
+          <a class="pull-right link" href="{{unbound i.link}}">
             <i class="fa fa-github"></i>
           </a>
         </div>
