--- a/website/js/templates/blog.hbs
+++ b/website/js/templates/blog.hbs
@@ -5,7 +5,7 @@
         <a class="link" href="{{unbound itm.link}}">{{unbound itm.title}}</a>
       </h2>
       <div class="post-body">
-        {{{unbound itm.description}}}
+        {{unbound itm.description}}
       </div>
     </div>
   {{/each}}
