--- a/website/js/templates/stackoverflow.hbs
+++ b/website/js/templates/stackoverflow.hbs
@@ -5,7 +5,7 @@
       <a class="link" href="{{unbound i.id}}">{{unbound i.title}}</a>
     </h2>
     <div class="post-body">
-      {{{unbound i.content}}}
+      {{unbound i.content}}
     </div>
   </div>
   {{/each}}
