--- a/website/js/templates/application.hbs
+++ b/website/js/templates/application.hbs
@@ -69,7 +69,7 @@
           <p>
             This website's source code can be found at github and is licensed under the
             <a class="link" href="http://opensource.org/licenses/MIT">MIT license</a>.
-            Content is under license under the
+            Content is licensed under the
             <a class="link" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>
             license.
           </p>
@@ -78,7 +78,7 @@
           <h4>Contact</h4>
           <p>
             I am open to speaking at dev meetups and
-            conferences, taking on a new writing project and
+            conferences, taking on a new writing projects and
             doing occasional interviews.
           </p>
           <p>
