--- a/talks/data/boxes.hbs
+++ b/talks/data/boxes.hbs
@@ -4,9 +4,11 @@
     {{/if}}
                 <div class="col-md-4">
                     <div class="well expandUp">
-                        <h5>{{category}}</h5>
-                        <h3>{{title}}</h3>
-                        <p>{{{desc}}}</p>
+                        <div style="min-height: 200px;">
+                          <h5>{{category}}</h5>
+                          <h3>{{title}}</h3>
+                          <p>{{{desc}}}</p>
+                        </div>
                         <p style="text-align: right;">
                           <br/>
                           <a class="btn" href="{{href}}" role="button">
