--- a/website/js/templates/index.hbs
+++ b/website/js/templates/index.hbs
@@ -1,6 +1,7 @@
 
 <!-- welcome -->
 <div class="jumbotron fadeInUp animated">
+    <div class="header_bg"></div>
     <div class="row">
         <div id="summary_content">
             {{view view.CvSummaryView}}
