updated header and added talk

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -937,6 +937,7 @@ code {
     background-repeat: no-repeat;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    background-position-x: 50%;
 }
 
 .container .jumbotron {
