--- a/website/js/templates/twitter.hbs
+++ b/website/js/templates/twitter.hbs
@@ -3,7 +3,7 @@
     <div class="col-md-4">
       <div class="well fadeInUp animated tweet">
         <a href="https://twitter.com/OweR_ReLoaDeD/">
-          <img src="/website/assets/me.png" class="pull-left img-rounded tweet-image"/>
+          <img src="/website/assets/me.jpg" class="pull-left img-rounded tweet-image"/>
         </a>
         <div class="tweet-body">
           <div class="tweet-text">
