--- a/website/js/templates/cv/summary.hbs
+++ b/website/js/templates/cv/summary.hbs
@@ -1,6 +1,6 @@
 <div class="col-md-4 printNotVisible" style="text-align: center;">
   <div class="main-img-container">
-      <img src="{{unbound summary.image_path}}" class="img-circle main-img"/>
+      <img src="{{unbound summary.image_path}}" class="main-img"/>
   </div>
 </div>
 <div class="col-md-8">
