--- a/website/js/templates/twitter.hbs
+++ b/website/js/templates/twitter.hbs
@@ -2,7 +2,7 @@
   {{#each itm in item}}
     <div class="col-md-4">
       <div class="well fadeInUp animated tweet">
-        <a href="https://twitter.com/OweR_ReLoaDeD/">
+        <a href="https://twitter.com/RemoHJansen/">
           <img src="/website/assets/me.jpg" class="pull-left img-rounded tweet-image"/>
         </a>
         <div class="tweet-body">
@@ -30,6 +30,6 @@
     <strong>Please Note:</strong>
     This is just a preview of my latest tweets.
     If you are looking for all my tweets. You can find my twitter user
-    profile at <a href="https://twitter.com/OweR_ReLoaDeD/">@OweR_ReLoaDeD</a>
+    profile at <a href="https://twitter.com/RemoHJansen/">@RemoHJansen</a>
   </p>
 </blockquote>
