--- a/website/js/templates/application.hbs
+++ b/website/js/templates/application.hbs
@@ -83,7 +83,7 @@
           </p>
           <p>
             Please feel free to contact me via
-            <a class="link" href="https://twitter.com/OweR_ReLoaDeD">twitter</a>,
+            <a class="link" href="https://twitter.com/RemoHJansen">twitter</a>,
             <a class="link" href="http://www.linkedin.com/in/remojansen">linkedin</a>
             or <a class="link" href="mailto:remo.jansen@wolksoftware.com">email</a>.
           </p>
