--- a/website/js/templates/application.hbs
+++ b/website/js/templates/application.hbs
@@ -48,19 +48,14 @@
           <h4>About</h4>
           <p>
             I'm a
-            <a class="link" href="#/portfolio">web development ninja</a>,
+            <a class="link" href="https://mvp.microsoft.com/en-us/PublicProfile/5002223">Microsoft MVP</a>
+            <a class="link" href="#/portfolio">Full-Stack JavaScript and TypeScript Ninja</a>,
             <a class="link" href="#/github">open-source contributor</a>,
             <a class="link" href="#/publications">writer</a>,
             <a class="link" href="#/talks">speaker</a>,
             <a class="link" href="http://www.wolksoftware.com">entrepreneur</a>,
-            <a class="link" href="#/blog">technology lover</a>,
-            <a class="link" href="https://live.xbox.com/en-US/Profile?gamertag=OweR%20ReLoaDeD">gamer</a>
-            and
-            <a class="link" href="#/twitter">Internet enthusiast</a>.
-            Lead UX Engineer
-            <a class="link" href="http://www.moneymate.com">@MoneyMate</a> &amp;
-            CEO
-            <a class="link" href="http://www.wolksoftware.com">@WolkSoftwareLtd</a>.
+            <a class="link" href="#/blog">technology lover</a> and
+            <a class="link" href="https://live.xbox.com/en-US/Profile?gamertag=OweR%20ReLoaDeD">gamer</a>.
           </p>
         </div>
         <div class="col-md-4">
